--- a/packages/popover/src/styles/Popover.module.css
+++ b/packages/popover/src/styles/Popover.module.css
@@ -3,7 +3,7 @@
 }
 
 .Popover {
-  z-index: var(--lp-z-index-500);
+  z-index: var(--lp-z-index-600);
   position: absolute;
 }
 
